--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  overflow: hidden;
+  height: 380px;
+  width: 1280px;
+  background-color: #000;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.selected {
+  border: 4px solid #ffeb00;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list {
+  display: flex;
+}
+
+.list:focus-visible {
+  outline: unset;
+}
+
+.list-item {
+  flex: 0 0 auto;
+  margin-right: 15px;
+  cursor: pointer;
+  flex-shrink: 0;
+  transition: transform 0.5s ease-in-out;
+  height: 300px;
+  width: 300px;
+}
+
+.list-item:nth-child(1) {
+  margin-left: 15px;
+}
+
+.list-item img {
+  width: 100%;
+  height: 100%;
+}
+
+.image-title {
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 5px;
 }
